# witty-bot

./: .dockerignore  .drone.yml  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.web  Dockerfile.worker  Makefile  Procfile  book_stores.py  books.py  bot.py  config.py  coordinators.py  docker-compose-dev.yml  handlers.py  heroku-release.sh  joker.py  latex2png.py  main.py  math_problem.py  math_problems.py  pyproject.toml  russian_rules.py  services.py  tasks.py  viewcontrollers.py  web.py  wsgi.py
bot/: __init__.py  __main__.py  book_stores.py  books.py  config.py  coordinators.py  handlers.py  russian_rules.py  services.py  viewcontrollers.py
bot/utils/: latex2png.py
resources/: russian_rules.yaml
resources/books/: Python Cookbook.yaml
resources/math/integral/: book.yaml
resources/math/integral/problems/: 9.1 Непосредственное интегрирование.yaml  9.2 Интегрирование путем подведения под знак дифференциала и методом подстановки.yaml  9.3 Интегрирование по частям.yaml  9.4 Интегрирование рациональных функций.yaml
scripts/: build-book-meta
static/: index.html
tasks/integral_problems/: 9.1 Найти интегралы.txt  9.2 Найти интегралы.txt  9.3 Найти интегралы.txt
tests/: test_books.py  test_russian_rules.py  test_utils.py
utils/: latex2png.py
