[tool.poetry]
name = "witty-bot"
version = "0.1.0"
description = ""
authors = ["Sergey Karatach <karatach1998@yandex.ru>"]

[tool.poetry.dependencies]
python = "3.7.9"
python-telegram-bot = "^13.1"
matplotlib = "^3.3"
sympy = "^1.7"
wolframalpha = "^4.1"
antlr4-python3-runtime = "^4.9"
yadisk = "^1.2.14"
PyYAML = "^5.4.1"
PyDrive = "^1.3.1"
pyramid = "^2.0"
pre-commit = "^2.11.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pre-commit = "^2.10.1"
pylint = "^2.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
